--- a/requirements.txt
+++ b/requirements.txt
@@ -1,36 +1,99 @@
+annotated-types==0.7.0
+anyio==4.4.0
+asgiref==3.8.1
 asttokens==2.1.0
 backcall==0.2.0
+backoff==2.2.1
+bcrypt==4.1.3
 Brotli==1.1.0
 build==1.2.1
 CacheControl==0.14.0
+cachetools==5.3.3
 certifi==2024.2.2
 charset-normalizer==3.3.2
+chroma-hnswlib==0.7.3
+chromadb==0.5.0
 cleo==2.1.0
+click==8.1.7
 colorama==0.4.6
+coloredlogs==15.0.1
 crashtest==0.4.1
 debugpy==1.6.3
 decorator==5.1.1
+Deprecated==1.2.14
 distlib==0.3.8
+distro==1.9.0
+dnspython==2.6.1
 dulwich==0.21.7
+email_validator==2.1.1
 entrypoints==0.4
+exceptiongroup==1.2.1
 executing==1.2.0
+fastapi==0.111.0
+fastapi-cli==0.0.4
 fastjsonschema==2.19.1
 filelock==3.14.0
+flatbuffers==24.3.25
+fsspec==2024.6.0
+google-auth==2.30.0
+googleapis-common-protos==1.63.1
+grpcio==1.64.1
+h11==0.14.0
+httpcore==1.0.5
+httptools==0.6.1
+httpx==0.27.0
+huggingface-hub==0.23.3
+humanfriendly==10.0
 idna==3.7
 importlib_metadata==7.1.0
+importlib_resources==6.4.0
 installer==0.7.0
+intel-openmp==2021.4.0
 ipykernel==6.17.1
 ipython==8.6.0
 jaraco.classes==3.4.0
 jedi==0.18.2
+Jinja2==3.1.4
+joblib==1.4.2
 jupyter_client==7.4.7
 jupyter_core==5.0.0
 keyring==24.3.1
+kubernetes==30.1.0
+llvmlite==0.42.0
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
 matplotlib-inline==0.1.6
+mdurl==0.1.2
+mkl==2021.4.0
+mmh3==4.1.0
+monotonic==1.6
 more-itertools==10.2.0
+mpmath==1.3.0
 msgpack==1.0.8
 mutagen==1.47.0
 nest-asyncio==1.5.6
+networkx==3.3
+nltk==3.8.1
+numba==0.59.1
+numpy==1.26.4
+oauthlib==3.2.2
+ollama==0.2.1
+ollama-python==0.1.2
+onnxruntime==1.18.0
+openai==1.34.0
+openai-whisper==20231117
+opentelemetry-api==1.25.0
+opentelemetry-exporter-otlp-proto-common==1.25.0
+opentelemetry-exporter-otlp-proto-grpc==1.25.0
+opentelemetry-instrumentation==0.46b0
+opentelemetry-instrumentation-asgi==0.46b0
+opentelemetry-instrumentation-fastapi==0.46b0
+opentelemetry-proto==1.25.0
+opentelemetry-sdk==1.25.0
+opentelemetry-semantic-conventions==0.46b0
+opentelemetry-util-http==0.46b0
+orjson==3.10.3
+overrides==7.7.0
 packaging==24.0
 parso==0.8.3
 pexpect==4.9.0
@@ -41,31 +104,67 @@ platformdirs==4.2.2
 poetry==1.8.3
 poetry-core==1.9.0
 poetry-plugin-export==1.8.0
+posthog==3.5.0
 prompt-toolkit==3.0.33
+protobuf==4.25.3
 psutil==5.9.4
 ptyprocess==0.7.0
 pure-eval==0.2.2
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
 pycryptodomex==3.20.0
+pydantic==2.7.3
+pydantic_core==2.18.4
 Pygments==2.13.0
 pyparsing==3.0.9
+PyPika==0.48.9
 pyproject_hooks==1.1.0
+pyreadline3==3.4.1
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+python-multipart==0.0.9
 pywin32==305
 pywin32-ctypes==0.2.2
+PyYAML==6.0.1
 pyzmq==24.0.1
 rapidfuzz==3.9.0
+regex==2024.5.15
 requests==2.31.0
+requests-oauthlib==2.0.0
 requests-toolbelt==1.0.0
+responses==0.24.1
+rich==13.7.1
+rsa==4.9
 shellingham==1.5.4
 six==1.16.0
+sniffio==1.3.1
 stack-data==0.6.2
+starlette==0.37.2
+sympy==1.12.1
+tbb==2021.12.0
+tenacity==8.3.0
+tiktoken==0.7.0
+tokenizers==0.19.1
 tomli==2.0.1
 tomlkit==0.12.5
+torch==2.3.1+cu118
+torchaudio==2.3.1+cu118
+torchvision==0.18.1+cu118
 tornado==6.2
+tqdm==4.66.4
 traitlets==5.5.0
 trove-classifiers==2024.5.17
+typer==0.12.3
+typing_extensions==4.12.1
+ujson==5.10.0
 urllib3==2.2.1
+uvicorn==0.30.1
 virtualenv==20.26.2
+watchfiles==0.22.0
 wcwidth==0.2.5
+websocket-client==1.8.0
 websockets==12.0
-yt-dlp==2024.4.9
+whisper==1.1.10
+wrapt==1.16.0
+yt-dlp==2024.5.27
 zipp==3.18.2
